tests/unit-fail/j045c.c
int main(void) {
      int x = 0;
      return 1/x;
}
